--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 		<title>Profil: Jana Czechita</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
-	<body>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Source+Sans+Pro:wght@400;900&display=swap" rel="stylesheet">
 
+	<body>
+		
 		<div class="profil">
 
 			<div class="hlavicka">
@@ -29,9 +33,9 @@
 			</div>
 
 			<ul class="odkazy">
-				<li class="portfolio"><a href="#">Moje portfolio</a></li><!--
-				--><li class="facebook"><a href="#">Facebook</a></li><!--
-				--><li class="twitter"><a href="#">Twitter</a></li>
+				<li class="portfolio"><a href="#">MOJE PORTFOLIO</a></li><br><!--
+				--><li class="facebook"><a href="#">FACEBOOK</a></li><!--
+				--><li class="twitter"><a href="#">TWITTER</a></li>
 			</ul>
 
 		</div>
